--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,20 @@
 steps:
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy']
-timeout: '1600s'
+
+- name: 'node:14'
+
+ args: ['npm', 'install']
+
+
+- name: 'node:14'
+
+ args: ['npm', 'run', 'build']
+
+
+- name: 'gcr.io/cloud-builders/gcloud'
+
+ args: ['app', 'deploy']
+
+ env:
+
+ - 'GCLOUD_PROJECT=project-p5-game'
+
